--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			<div class="row">
 				<div class="col-md-6 col-sm-6 col-xs-12">
 					<div class="work_item vertpan pic wow zoomInUp">
-						<a href="https://sasha1985obozny.github.io/brandly/" target="_blank"><img src="img/brandly_hover.jpg" alt="brandly"></a>
+						<a href="https://sasha1985obozny.github.io/brandly/" target="_blank"><img src="img/Brandly_hover.jpg" alt="brandly"></a>
 						
 					</div>
 				</div>
@@ -145,7 +145,7 @@
 				</div>
 				<div class="col-md-6 col-sm-6 col-xs-12">
 					<div class="work_item vertpan2 pic wow zoomInUp">
-						<a href="https://sasha1985obozny.github.io/marvel/" target="_blank"><img src="img/marvel_hover.jpg" alt="brandly"></a>
+						<a href="https://sasha1985obozny.github.io/marvel/" target="_blank"><img src="img/Marvel_hover.jpg" alt="brandly"></a>
 					</div>
 				</div>
 				<div class="col-md-6 col-sm-6 col-xs-12">
